--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,12 @@
 cmake_minimum_required(VERSION 2.8)
+project(ydlidar_sdk_gs2 C CXX)
+
 #add_definitions(-std=c++11) # Use C++11
 SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 include_directories(include)
 include_directories(src)
 set(CMAKE_BUILD_TYPE Release)
+
 IF (WIN32)
 FILE(GLOB SDK_SRC 
   "src/*.cpp"
@@ -27,9 +30,9 @@ ENDIF()
 
 add_subdirectory(samples)
 
-add_library(ydlidar_driver STATIC ${SDK_SRC})
+add_library(${PROJECT_NAME} SHARED ${SDK_SRC})
 IF (WIN32)
-target_link_libraries(ydlidar_driver setupapi Winmm)
+target_link_libraries(${PROJECT_NAME} setupapi Winmm)
 ELSE()
-target_link_libraries(ydlidar_driver rt pthread)
+target_link_libraries(${PROJECT_NAME} rt pthread)
 ENDIF()                    
