--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,6 +1,6 @@
-
 cmake_minimum_required(VERSION 2.8)
-PROJECT(ydlidar_test)
+PROJECT(ydlidar_test_gs2)
+
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 add_definitions(-std=c++11) # Use C++11
 set(CMAKE_BUILD_TYPE Release)
@@ -16,4 +16,4 @@ ADD_EXECUTABLE(${PROJECT_NAME}
                main.cpp)
 
 # Add the required libraries for linking:
-TARGET_LINK_LIBRARIES(${PROJECT_NAME} ydlidar_driver)
+TARGET_LINK_LIBRARIES(${PROJECT_NAME} ydlidar_sdk_gs2)
